<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Jago Menabung</string>
    <string name="facebook_app_id">635899674894646</string>
    <string name="fb_login_protocol_scheme">fb635899674894646</string>
    <string name="facebook_client_token">54b8047e77f141da50733b2e354302c3</string>
    <string name="harian">Harian</string>
    <string name="bulanan">Bulanan</string>
    <string name="tahunan">Tahunan</string>
    <string name="tambah_transaksi">Tambah transaksi</string>
    <string name="rp_list">%1$s</string>
    <string name="pesan_hapus_transaksi">Hapus transaksi?</string>
    <string name="tidak_ada_catatan">Tidak ada transaksi</string>
    <string name="logout">Logout?</string>
    <string name="register_gagal">Email sudah terdaftar</string>
    <string name="register_berhasil">Register berhasil</string>
    <string name="login_berhasil">Login berhasil</string>
    <string name="akun_tidak_terdaftar">Akun tidak terdaftar</string>
    <string name="silahkan_isi_semua_data">Silahkan isi semua data</string>
    <string name="gagal_masuk">Gagal, pastikan data terisi dengan benar</string>
    <string name="gagal_isi_data">Gagal, pastikan data terisi dengan benar</string>
    <string name="tambah_berhasil">Tambah transaksi berhasil</string>
    <string name="profil_gagal">Profile gagal diupdate</string>
    <string name="stylebackground1">styleBackground!</string>
    <string name="masuk">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="tidak_punya_akun">Tidak punya Akun?</string>
    <string name="daftar">Daftar</string>
    <string name="kami_tidak_akan_memposting_tanpa_izin_anda">Kami tidak akan memposting tanpa izin anda</string>
    <string name="nama">Nama</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="leftbutton">leftButton</string>
    <string name="bulan">Agustus 2023</string>
    <string name="righbutton">righButton</string>
    <string name="tidak_ada_transaksi">Tidak ada transaksi</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="_0">0</string>
    <string name="saldo">Saldo</string>
    <string name="addimage">addImage</string>
    <string name="simpan">Simpan</string>
    <string name="reset">Reset</string>
    <string name="kategori">Kategori</string>
    <string name="tanggal_str">Tanggal</string>
    <string name="judul">Judul</string>
    <string name="jumlah_rp">Jumlah Rp.</string>
    <string name="keterangan">Keterangan</string>
    <string name="hapus">Hapus</string>
    <string name="tambah">Tambah</string>
    <string name="ic_list">ic_list</string>
    <string name="mohon_tunggu">Mohon Tunggu</string>
    <string name="logo_app">logo_app</string>
    <string name="grafik">Grafik</string>
    <string name="profil">Profil</string>
    <string name="logout_menu">Logout</string>
    <string name="filter">filter</string>
    <string name="semua">Semua</string>
    <string-array name="kategori_transaksi">
        <item>Pemasukan</item>
        <item>Pengeluaran</item>
    </string-array>
    <string-array name="kategori_filter">
        <item>Semua</item>
        <item>Pemasukan</item>
        <item>Pengeluaran</item>
    </string-array>
    <string name="belum_ada_target">Belum ada target</string>
    <string name="target">Target</string>
    <string name="tanggal_akhir">%1$s</string>
    <string name="tanggal_mulai">%1$s</string>
    <string name="capaian">Sudah tercapai</string>
    <string name="capaian_belum">Belum tercapai</string>
    <string name="target_menu">Target</string>
    <string name="tambah_target">Tambah Capaian Berhasil</string>
    <string name="button_menu">button menu</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="lupa_passwordTex">Lupa Password</string>
    <string name="ket_lupa_pass">Masukan email anda yang terdaftar, kami akan mengirim pesan untuk mereset password akun anda</string>
    <string name="batal">Batal</string>
    <string name="kirim">Kirim</string>
    <string name="berhasil">Berhasil</string>
    <string name="ok">Ok</string>
    <string name="gagal">Gagal</string>
    <string name="akhir">Akhir</string>
    <string name="mulai">Mulai</string>
    <string name="rrr">:</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="search">Search</string>
    <string name="filter_transaksi">Filter Transaksi</string>
    <string name="pilih_tanggal">Pilih tanggal</string>
    <string name="masukan_judul_transaksi">Masukan judul transaksi</string>
    <string name="pencapaian">Pencapaian</string>
    <string name="belum_ada_capaian">Belum ada capaian</string>
    <string name="capaian_90">Capaian : 90%</string>
    <string name="target_rp">Target Rp</string>
    <string name="terkumpul_rp">Terkumpul Rp</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="rp5_000_00">Rp5.000,00</string>
    <string name="_12_desember_2023">12 Desember 2023</string>
    <string name="riwayat_input_saldo">Riwayat Input Saldo</string>
    <string name="input_saldo">Input Saldo</string>
    <string name="belum_ada_riwayat">Belum ada riwayat</string>
    <string name="saldo_rp">Saldo Rp</string>
    <string name="id">id</string>
    <string name="ket">Ket :</string>
    <string name="ket_pembalikan_saldo">Saldo capaian dikembalikan lagi ke saldo utama anda</string>
    <string name="kunci">kunci</string>
    <string name="kunci_capaian">Kunci Capaian</string>
    <string name="rp50_000_00">Rp50.000,00</string>
    <string name="terkumpul_dari">terkumpul dari</string>
    <string name="rp100_000_00">Rp100.000,00</string>
    <string name="riwayat_nabung">Riwayat Nabung</string>
    <string name="nabung">Nabung</string>
</resources>