<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.HomeFragment"
    android:background="@color/abumuda2"
    tools:ignore="Overdraw">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:backgroundTint="@color/abumuda">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pemasukan" />
            <TextView
                android:id="@+id/tv_pemasukan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="@color/green"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saldo" />
            <TextView
                android:id="@+id/tv_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pengeluaran" />

            <TextView
                android:id="@+id/tv_pengeluaran"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="@color/red"/>
        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:backgroundTint="@color/endColor"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:gravity="center"
            android:paddingBottom="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <ImageButton
                    android:id="@+id/previous"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/ic_baseline_keyboard_arrow_left_24"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/leftbutton" />
            </RelativeLayout>


            <TextView
                android:id="@+id/tv_bulan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/bulan"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <ImageButton
                    android:id="@+id/next"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/ic_baseline_keyboard_arrow_right_24"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/righbutton" />
            </RelativeLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@color/abumuda"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview"
        app:layout_constraintVertical_bias="1.0" />

    <RelativeLayout
        android:id="@+id/nullable"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroymedium"
            android:textSize="16sp"
            android:textColor="@color/abumuda3"
            android:text="@string/tidak_ada_catatan"/>
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/endColor"
        android:contentDescription="@string/tambah_transaksi"
        android:src="@drawable/ic_baseline_add_24"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>