<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listTransaksi"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroysemibold"
                android:text="@string/judul"
                android:textColor="@color/endColor"
                android:textSize="18sp"
                tools:ignore="NestedWeights"
                android:layout_centerHorizontal="true"/>

            <ImageButton
                android:id="@+id/menuBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/baseline_more_vert_24"
                android:backgroundTint="@color/endColor"
                android:contentDescription="@string/button_menu"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="3dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/endColor" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gilroymedium"
                android:textColor="@color/endColor"
                android:text="@string/mulai"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gilroymedium"
                android:textColor="@color/endColor"
                android:text="@string/rrr"
                android:textSize="15sp"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/tv_tanggalMulai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gilroymedium"
                android:textColor="@color/endColor"
                android:text="@string/tanggal_mulai"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gilroymedium"
                android:textColor="@color/endColor"
                android:text="@string/akhir"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gilroymedium"
                android:textColor="@color/endColor"
                android:text="@string/rrr"
                android:textSize="15sp"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/tv_tanggalAkhir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gilroymedium"
                android:textColor="@color/endColor"
                android:text="@string/tanggal_akhir"
                android:textSize="15sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/tv_saldoTerkumpul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gilroymedium"
                android:textColor="@color/pemasukan"
                android:text="Rp50.000,00"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_terkumpul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gilroymedium"
                android:textColor="@color/endColor"
                android:text=" terkumpul dari "
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_saldoTarget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gilroymedium"
                android:textColor="@color/endColor"
                android:text="Rp100.000,00"
                android:textSize="15sp" />
        </LinearLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleHorizontal"
                android:scaleY="2"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_progres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/gilroysemibold"
                android:text="@string/capaian"
                android:textColor="@color/pemasukan"
                android:textSize="15sp"
                tools:ignore="NestedWeights"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>