<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listTransaksi"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:paddingVertical="10dp"
        android:paddingHorizontal="10dp">

        <ImageView
            android:id="@+id/ic_transaksi"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/rp_pengeluaran"
            android:contentDescription="@string/ic_list" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginHorizontal="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginHorizontal="5dp">

                <TextView
                    android:id="@+id/tv_judul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/gilroysemibold"
                    android:text="@string/judul"
                    android:textColor="@color/endColor"
                    android:textSize="15sp"
                    tools:ignore="NestedWeights" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="3dp"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="@color/endColor" />

                <TextView
                    android:id="@+id/tv_keterangan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/gilroymedium"
                    android:textColor="@color/endColor"
                    android:text="@string/keterangan"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_saldotransaksi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1.4"
                android:fontFamily="@font/gilroysemibold"
                android:textColor="@color/green"
                android:text="@string/rp_list"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>